# market-data-dq-platform

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
dq/: bootstrap.py  calendars.py  cleanup.py  cli.py  dashboard.py  db.py  dq_pack.py  engine.py  ingest.py  models.py  pack.py  settings.py  universe.py
dq/config/: universe.yml
dq/providers/: base.py  ecb_fx.py  fred.py  registry.py  stooq.py  twelvedata.py  yfinance_provider.py
dq/rules/: base.py  gaps.py  reconcile.py  relations.py  spikes.py
tests/: test_smoke.py
