[project]
name = "market-data-dq-platform"
version = "0.1.0"
description = "Market Data DQ Platform for VaR risk factors (spikes/gaps/relations/reconciliation) with audit trail + Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.1",
  "scipy>=1.11",
  "sqlmodel>=0.0.21",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dateutil>=2.8",
  "requests>=2.31",
  "pandas-datareader>=0.10.0",
  "yfinance>=0.2.0",
  "streamlit>=1.31",
  "plotly>=5.18",
  "jinja2>=3.1",
  "reportlab>=4.0",
  "PyYAML>=6.0",
]

[project.scripts]
dq = "dq.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
